# global-temperature-visual

./: README.md  pyproject.toml
src/: app.py  data_engine.py
src/static/css/: style.css
src/static/js/: city-temp-chart.js  city.js  dashboard.js  global_temp_line.js
src/templates/: index.html
tests/: api_test.py
课程设计提交材料清单/: 小组提交材料清单.txt  数据可视化课程设计.docx  课程设计过程记录表.docx  课程设计题目清单.docx
